# pragmatic_rust_for_engineers

./: .gitignore  Cargo.toml  README.md
haber_bosch/: Cargo.toml  tasks.md  v2_tasks.md  v3_tasks.md
haber_bosch/src/: configuration.rs  hints.rs  lib.rs  main.rs  simulation.rs  solution.rs  v2_hints.rs  v2_main.rs  v2_main_plot.rs  visualization.rs  web.rs  web_range.rs  web_visualization.rs
haber_bosch/www/: bootstrap.js  index.html  index.js  style.css
