[package]
name = "haber_bosch"
version = "0.1.0"
edition = "2021"
description = "These crates contain the source code for the Haber Bosch Simulation of the Pragmatic Rust for Engineers video series. See the README.md for more details."
repository = "https://github.com/DarthB/pragmatic_rust_for_engineers"
license = "MIT or Apache-2.0"
default-run = "hb_seq_simulation"

[[bin]]
name = "hb_ode_test"
path = "src/main.rs"

[[bin]]
name = "hb_plot_test"
path = "src/v2_main_plot.rs"

[[bin]]
name = "hb_seq_simulation"
path = "src/v2_main.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
ode_solvers = "0.3.7"
plotters = "0.3.5"
itertools = "0.12.0"

wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1"
plotters-canvas = "^0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
